// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Diagnostics should match snapshot (no isobars) 1`] = `
<div mock-v-loading="0">
  <!---->
  <!---->
  <!---->
  <div class="">
    <div class="el-row" id="scores-table">
      <div class="msm-score-calc" mock-v-loading="1">MSM score = <span>0.657</span> = 0.006 (ρ<sub>spatial</sub>) × 0.791 (ρ<sub>spectral</sub>) × 0.998 (ρ<sub>chaos</sub>)</div>
      <div>
        <mock-el-popover trigger="hover" open-delay="100">
          <div slot-key="default">Image analysis gave an off-sample probability of less than 10%.</div>
          <div slot-key="reference"><span class="on-sample-tag">On-sample</span></div>
        </mock-el-popover>
      </div>
    </div>
    <div class="isotope-images-container tour-isotope-images el-row">
      <div class="el-col el-col-24 el-col-xs-24 el-col-sm-12 el-col-md-12 el-col-lg-6">
        <div class="small-peak-image">
          100.0000
          <!----> <br>
          <imageloader-stub src="/fs/iso_images/img1" colormap="Viridis" image-fit-params="[object Object]" min-intensity="0" max-intensity="100" show-pixel-intensity="" annotimageopacity="1" opacitymode="constant" imageposition="[object Object]" pixelaspectratio="1" style="overflow: hidden;"></imageloader-stub>
        </div>
      </div>
      <div class="el-col el-col-24 el-col-xs-24 el-col-sm-12 el-col-md-12 el-col-lg-6">
        <div class="small-peak-image">
          101.0000
          <!----> <br>
          <imageloader-stub src="/fs/iso_images/img2" colormap="Viridis" image-fit-params="[object Object]" min-intensity="100" max-intensity="200" show-pixel-intensity="" annotimageopacity="1" opacitymode="constant" imageposition="[object Object]" pixelaspectratio="1" style="overflow: hidden;"></imageloader-stub>
        </div>
      </div>
    </div>
  </div>
  <!---->
  <!---->
  <div>
    <div class="el-row" id="isotope-plot-container">
      <div class="peak-chart">
        <div style="height: 300px;"><svg width="200" height="300">
            <defs>
              <pattern id="pattern-stripe" width="6" height="6" patternUnits="userSpaceOnUse" patternTransform="rotate(45)">
                <rect width="3" height="6" transform="translate(0,0)" fill="white"></rect>
              </pattern>
              <mask id="mask-stripe">
                <rect x="0" y="0" width="100%" height="100%" fill="url(#pattern-stripe)"></rect>
              </mask>
            </defs>
            <g transform="translate(40, 10)">
              <g transform="translate(0, 240)" fill="none" font-size="10" font-family="sans-serif" text-anchor="middle">
                <path class="domain" stroke="currentColor" d="M0.5,6V0.5H120.5V6"></path>
                <g class="tick" opacity="1" transform="translate(10.499999999999526,0)">
                  <line stroke="currentColor" y2="6"></line><text fill="currentColor" y="9" dy="0.71em">100.0</text>
                </g>
                <g class="tick" opacity="1" transform="translate(30.5,0)">
                  <line stroke="currentColor" y2="6"></line><text fill="currentColor" y="9" dy="0.71em">100.2</text>
                </g>
                <g class="tick" opacity="1" transform="translate(50.500000000000476,0)">
                  <line stroke="currentColor" y2="6"></line><text fill="currentColor" y="9" dy="0.71em">100.4</text>
                </g>
                <g class="tick" opacity="1" transform="translate(70.49999999999953,0)">
                  <line stroke="currentColor" y2="6"></line><text fill="currentColor" y="9" dy="0.71em">100.6</text>
                </g>
                <g class="tick" opacity="1" transform="translate(90.5,0)">
                  <line stroke="currentColor" y2="6"></line><text fill="currentColor" y="9" dy="0.71em">100.8</text>
                </g>
                <g class="tick" opacity="1" transform="translate(110.50000000000047,0)">
                  <line stroke="currentColor" y2="6"></line><text fill="currentColor" y="9" dy="0.71em">101.0</text>
                </g>
              </g>
              <g fill="none" font-size="10" font-family="sans-serif" text-anchor="end">
                <path class="domain" stroke="currentColor" d="M-6,240.5H0.5V0.5H-6"></path>
                <g class="tick" opacity="1" transform="translate(0,240.5)">
                  <line stroke="currentColor" x2="-6"></line><text fill="currentColor" x="-11" dy="0.32em">0</text>
                </g>
                <g class="tick" opacity="1" transform="translate(0,192.5)">
                  <line stroke="currentColor" x2="-6"></line><text fill="currentColor" x="-11" dy="0.32em">20</text>
                </g>
                <g class="tick" opacity="1" transform="translate(0,144.5)">
                  <line stroke="currentColor" x2="-6"></line><text fill="currentColor" x="-11" dy="0.32em">40</text>
                </g>
                <g class="tick" opacity="1" transform="translate(0,96.5)">
                  <line stroke="currentColor" x2="-6"></line><text fill="currentColor" x="-11" dy="0.32em">60</text>
                </g>
                <g class="tick" opacity="1" transform="translate(0,48.5)">
                  <line stroke="currentColor" x2="-6"></line><text fill="currentColor" x="-11" dy="0.32em">80</text>
                </g>
                <g class="tick" opacity="1" transform="translate(0,0.5)">
                  <line stroke="currentColor" x2="-6"></line><text fill="currentColor" x="-11" dy="0.32em">100</text>
                </g>
              </g><text class="intensity-axis-label" transform="translate(-30, 120) rotate(-90)">Relative intensity</text><text style="text-anchor: middle;" transform="translate(60, 270) ">m/z</text>
              <g class="sample-graph soloSample">
                <g>
                  <circle cx="9.999999999999526" cy="0" r="4"></circle>
                  <circle cx="110.00000000000047" cy="96" r="4"></circle>
                </g>
                <g>
                  <line x1="9.999999999999526" x2="9.999999999999526" y1="0" y2="240"></line>
                  <line x1="110.00000000000047" x2="110.00000000000047" y1="96" y2="240"></line>
                </g>
                <g>
                  <rect width="0.0599999999991514" height="240" x="9.969999999999951" y="0"></rect>
                  <rect width="0.06060000000047694" height="144" x="109.96970000000023" y="96"></rect>
                </g>
              </g>
              <g class="theor-graph soloTheor">
                <g>
                  <path d="M0,240L9.999999999999526,237.6L19.99999999999905,240L100.00000000000095,240L110.00000000000047,238.8L120,240"></path>
                </g>
              </g>
              <g fill="none" pointer-events="all">
                <rect class="overlay" pointer-events="all" cursor="crosshair" x="0" y="0" width="120" height="240"></rect>
                <rect class="selection" cursor="move" fill="#777" fill-opacity="0.3" stroke="#fff" shape-rendering="crispEdges" style="display: none;"></rect>
                <rect class="handle handle--w" cursor="ew-resize" style="display: none;"></rect>
                <rect class="handle handle--e" cursor="ew-resize" style="display: none;"></rect>
              </g>
            </g>
          </svg></div>
        <div class="plot-legend">
          <div class="legend-item"><svg width="64" height="32">
              <g>
                <g class="theor-graph soloTheor">
                  <g>
                    <path d="M0,31L2,31L4,31L6,31L8,31L10,30.7L12,30.4L14,29.8L16,28.3L18,26.2L20,22.9L22,18.4L24,13.3L26,7.900000000000002L28,3.6999999999999993L30,1L32,1L34,3.400000000000002L36,7.900000000000002L38,13L40,18.4L42,22.6L44,26.2L46,28.3L48,29.5L50,30.4L52,30.7L54,31L56,31L58,31L60,31L62,31"></path>
                  </g>
                </g>
              </g>
            </svg> <span class="legend-item-name">Theoretical</span></div>
          <div class="legend-item"><svg width="64" height="32">
              <g>
                <g class="sample-graph soloSample">
                  <g>
                    <circle cx="32" cy="4" r="4"></circle>
                  </g>
                  <g>
                    <line x1="32" x2="32" y1="4" y2="32"></line>
                  </g>
                  <g>
                    <rect width="48" height="28" x="8" y="4"></rect>
                  </g>
                </g>
              </g>
            </svg> <span class="legend-item-name">Sample</span></div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Diagnostics should match snapshot (with isobar) 1`] = `
<div mock-v-loading="0">
  <transition-stub name="el-alert-fade" class="isobar-alert">
    <div role="alert" class="el-alert el-alert--warning is-light"><i class="el-alert__icon el-icon-warning is-big"></i>
      <div class="el-alert__content">
        <!---->
        <p class="el-alert__description">
          Another ion was annotated that is isobaric to the selected annotation.
          <!---->
          Select an isobaric annotation below to compare against.
        </p>
        <!----><i class="el-alert__closebtn el-icon-close" style="display: none;"></i>
      </div>
    </div>
  </transition-stub>
  <div class="compare-container">
    Compare selected annotation to:
    <mock-el-select placeholder="None" clearable="" class="compare-select" value="C8H9S2">
      <mock-el-option value="C8H9S2" label="[M+0.0000]: [C8H10S2 - H]⁻">[M+0.0000]: [C<sub>8</sub>H<sub>10</sub>S<sub>2</sub> - H]⁻</mock-el-option>
    </mock-el-select>
  </div>
  <div class="ref-annotation-header">
    <mock-el-popover trigger="hover" placement="top" open-delay="100">
      <div slot-key="default">
        <div class="leading-5 py-2 px-3 font-normal content text-sm text-left">
          <!---->
          <p class="title">
            Candidate molecule
          </p>
          <ul class="p-0 list-none leading-7">
            <li>
              C.I. Food Red 6
            </li>
            <!---->
          </ul>
          <!---->
          <!---->
        </div>
      </div>
      <div slot-key="reference"><span class="annotation-ion">[C<sub>19</sub>H<sub>18</sub>N<sub>2</sub>O<sub>7</sub>S<sub>2</sub> - H]⁺</span></div>
    </mock-el-popover> <span style="padding-left: 5px;">(Selected annotation)</span>
  </div>
  <div class="ref-annotation-container">
    <div class="el-row" id="scores-table">
      <div class="msm-score-calc">MSM score = <span>0.657</span> = 0.006 (ρ<sub>spatial</sub>) × 0.791 (ρ<sub>spectral</sub>) × 0.998 (ρ<sub>chaos</sub>)</div>
      <div>
        <mock-el-popover trigger="hover" open-delay="100">
          <div slot-key="default">Image analysis gave an off-sample probability of less than 10%.</div>
          <div slot-key="reference"><span class="on-sample-tag">On-sample</span></div>
        </mock-el-popover>
      </div>
    </div>
    <div class="isotope-images-container tour-isotope-images el-row">
      <div class="el-col el-col-24 el-col-xs-24 el-col-sm-12 el-col-md-12 el-col-lg-6">
        <div class="small-peak-image">
          100.0000
          <mock-el-popover trigger="hover" placement="top">
            <div slot-key="default">
              This peak's detection window overlaps with the other annotation's 1st peak.
            </div>
            <div slot-key="reference"><i class="el-icon-warning-outline"></i></div>
          </mock-el-popover> <br>
          <imageloader-stub src="/fs/iso_images/img1" colormap="Viridis" image-fit-params="[object Object]" min-intensity="0" max-intensity="100" show-pixel-intensity="" annotimageopacity="1" opacitymode="constant" imageposition="[object Object]" pixelaspectratio="1" style="overflow: hidden;"></imageloader-stub>
        </div>
      </div>
      <div class="el-col el-col-24 el-col-xs-24 el-col-sm-12 el-col-md-12 el-col-lg-6">
        <div class="small-peak-image">
          101.0000
          <!----> <br>
          <imageloader-stub src="/fs/iso_images/img2" colormap="Viridis" image-fit-params="[object Object]" min-intensity="100" max-intensity="200" show-pixel-intensity="" annotimageopacity="1" opacitymode="constant" imageposition="[object Object]" pixelaspectratio="1" style="overflow: hidden;"></imageloader-stub>
        </div>
      </div>
    </div>
  </div>
  <div class="comp-annotation-header">
    <!----> <span><mock-el-popover trigger="hover" placement="top" open-delay="100"><div slot-key="default"><div class="leading-5 py-2 px-3 font-normal content text-sm text-left"><!----> <p class="title">
      Candidate molecule
    </p> <ul class="p-0 list-none leading-7"><li>
        C.I. Food Red 6
      </li> <!----></ul> <!----> <!----></div> </div><div slot-key="reference"><span class="annotation-ion">[C<sub>8</sub>H<sub>10</sub>S<sub>2</sub> - H]⁻</span></div>
  </mock-el-popover>
  <!----></span>
</div>
<div class="comp-annotation-container">
  <div class="el-row" id="scores-table">
    <div class="msm-score-calc" mock-v-loading="1">MSM score = <span>0.657</span> = 0.006 (ρ<sub>spatial</sub>) × 0.791 (ρ<sub>spectral</sub>) × 0.998 (ρ<sub>chaos</sub>)</div>
    <div>
      <mock-el-popover trigger="hover" open-delay="100">
        <div slot-key="default">Image analysis gave an off-sample probability of 88%.</div>
        <div slot-key="reference"><span class="off-sample-tag">Off-sample</span></div>
      </mock-el-popover>
    </div>
  </div>
  <div class="isotope-images-container tour-isotope-images el-row">
    <div class="el-col el-col-24 el-col-xs-24 el-col-sm-12 el-col-md-12 el-col-lg-6">
      <div class="small-peak-image">
        100.0000
        <mock-el-popover trigger="hover" placement="top">
          <div slot-key="default">
            This peak's detection window overlaps with the other annotation's 1st peak.
          </div>
          <div slot-key="reference"><i class="el-icon-warning-outline"></i></div>
        </mock-el-popover> <br>
        <imageloader-stub src="/fs/iso_images/img1" colormap="Viridis" image-fit-params="[object Object]" min-intensity="0" max-intensity="100" show-pixel-intensity="" annotimageopacity="1" opacitymode="constant" imageposition="[object Object]" pixelaspectratio="1" style="overflow: hidden;"></imageloader-stub>
      </div>
    </div>
    <div class="el-col el-col-24 el-col-xs-24 el-col-sm-12 el-col-md-12 el-col-lg-6">
      <div class="small-peak-image">
        101.0000
        <!----> <br>
        <imageloader-stub src="/fs/iso_images/img2" colormap="Viridis" image-fit-params="[object Object]" min-intensity="100" max-intensity="200" show-pixel-intensity="" annotimageopacity="1" opacitymode="constant" imageposition="[object Object]" pixelaspectratio="1" style="overflow: hidden;"></imageloader-stub>
      </div>
    </div>
  </div>
</div>
<div>
  <div class="el-row" id="isotope-plot-container">
    <div class="peak-chart">
      <div style="height: 300px;"><svg width="200" height="300">
          <defs>
            <pattern id="pattern-stripe" width="6" height="6" patternUnits="userSpaceOnUse" patternTransform="rotate(45)">
              <rect width="3" height="6" transform="translate(0,0)" fill="white"></rect>
            </pattern>
            <mask id="mask-stripe">
              <rect x="0" y="0" width="100%" height="100%" fill="url(#pattern-stripe)"></rect>
            </mask>
          </defs>
          <g transform="translate(40, 10)">
            <g transform="translate(0, 240)" fill="none" font-size="10" font-family="sans-serif" text-anchor="middle">
              <path class="domain" stroke="currentColor" d="M0.5,6V0.5H120.5V6"></path>
              <g class="tick" opacity="1" transform="translate(10.499999999999526,0)">
                <line stroke="currentColor" y2="6"></line><text fill="currentColor" y="9" dy="0.71em">100.0</text>
              </g>
              <g class="tick" opacity="1" transform="translate(30.5,0)">
                <line stroke="currentColor" y2="6"></line><text fill="currentColor" y="9" dy="0.71em">100.2</text>
              </g>
              <g class="tick" opacity="1" transform="translate(50.500000000000476,0)">
                <line stroke="currentColor" y2="6"></line><text fill="currentColor" y="9" dy="0.71em">100.4</text>
              </g>
              <g class="tick" opacity="1" transform="translate(70.49999999999953,0)">
                <line stroke="currentColor" y2="6"></line><text fill="currentColor" y="9" dy="0.71em">100.6</text>
              </g>
              <g class="tick" opacity="1" transform="translate(90.5,0)">
                <line stroke="currentColor" y2="6"></line><text fill="currentColor" y="9" dy="0.71em">100.8</text>
              </g>
              <g class="tick" opacity="1" transform="translate(110.50000000000047,0)">
                <line stroke="currentColor" y2="6"></line><text fill="currentColor" y="9" dy="0.71em">101.0</text>
              </g>
            </g>
            <g fill="none" font-size="10" font-family="sans-serif" text-anchor="end">
              <path class="domain" stroke="currentColor" d="M-6,240.5H0.5V0.5H-6"></path>
              <g class="tick" opacity="1" transform="translate(0,240.5)">
                <line stroke="currentColor" x2="-6"></line><text fill="currentColor" x="-11" dy="0.32em">0</text>
              </g>
              <g class="tick" opacity="1" transform="translate(0,192.5)">
                <line stroke="currentColor" x2="-6"></line><text fill="currentColor" x="-11" dy="0.32em">20</text>
              </g>
              <g class="tick" opacity="1" transform="translate(0,144.5)">
                <line stroke="currentColor" x2="-6"></line><text fill="currentColor" x="-11" dy="0.32em">40</text>
              </g>
              <g class="tick" opacity="1" transform="translate(0,96.5)">
                <line stroke="currentColor" x2="-6"></line><text fill="currentColor" x="-11" dy="0.32em">60</text>
              </g>
              <g class="tick" opacity="1" transform="translate(0,48.5)">
                <line stroke="currentColor" x2="-6"></line><text fill="currentColor" x="-11" dy="0.32em">80</text>
              </g>
              <g class="tick" opacity="1" transform="translate(0,0.5)">
                <line stroke="currentColor" x2="-6"></line><text fill="currentColor" x="-11" dy="0.32em">100</text>
              </g>
            </g><text class="intensity-axis-label" transform="translate(-30, 120) rotate(-90)">Relative intensity</text><text style="text-anchor: middle;" transform="translate(60, 270) ">m/z</text>
            <g class="sample-graph soloSample">
              <g>
                <circle cx="9.999999999999526" cy="0" r="4"></circle>
                <circle cx="110.00000000000047" cy="96" r="4"></circle>
              </g>
              <g>
                <line x1="9.999999999999526" x2="9.999999999999526" y1="0" y2="240"></line>
                <line x1="110.00000000000047" x2="110.00000000000047" y1="96" y2="240"></line>
              </g>
              <g>
                <rect width="0.0599999999991514" height="240" x="9.969999999999951" y="0"></rect>
                <rect width="0.06060000000047694" height="144" x="109.96970000000023" y="96"></rect>
              </g>
            </g>
            <g class="theor-graph soloTheor">
              <g>
                <path d="M0,240L9.999999999999526,237.6L19.99999999999905,240L100.00000000000095,240L110.00000000000047,238.8L120,240"></path>
              </g>
            </g>
            <g fill="none" pointer-events="all">
              <rect class="overlay" pointer-events="all" cursor="crosshair" x="0" y="0" width="120" height="240"></rect>
              <rect class="selection" cursor="move" fill="#777" fill-opacity="0.3" stroke="#fff" shape-rendering="crispEdges" style="display: none;"></rect>
              <rect class="handle handle--w" cursor="ew-resize" style="display: none;"></rect>
              <rect class="handle handle--e" cursor="ew-resize" style="display: none;"></rect>
            </g>
          </g>
        </svg></div>
      <div class="plot-legend">
        <div class="legend-item"><svg width="64" height="32">
            <g>
              <g class="theor-graph refTheor">
                <g>
                  <path d="M0,31L2,31L4,31L6,31L8,31L10,30.7L12,30.4L14,29.8L16,28.3L18,26.2L20,22.9L22,18.4L24,13.3L26,7.900000000000002L28,3.6999999999999993L30,1L32,1L34,3.400000000000002L36,7.900000000000002L38,13L40,18.4L42,22.6L44,26.2L46,28.3L48,29.5L50,30.4L52,30.7L54,31L56,31L58,31L60,31L62,31"></path>
                </g>
              </g>
            </g>
          </svg> <span class="legend-item-name">[C<sub>19</sub>H<sub>18</sub>N<sub>2</sub>O<sub>7</sub>S<sub>2</sub> - H]⁺<br> Theoretical</span></div>
        <div class="legend-item"><svg width="64" height="32">
            <g>
              <g class="sample-graph refSample">
                <g>
                  <circle cx="32" cy="4" r="4"></circle>
                </g>
                <g>
                  <line x1="32" x2="32" y1="4" y2="32"></line>
                </g>
                <g>
                  <rect width="48" height="28" x="8" y="4"></rect>
                </g>
              </g>
            </g>
          </svg> <span class="legend-item-name">[C<sub>19</sub>H<sub>18</sub>N<sub>2</sub>O<sub>7</sub>S<sub>2</sub> - H]⁺<br> Sample</span></div>
        <div class="legend-item"><svg width="64" height="32">
            <g>
              <g class="theor-graph compTheor">
                <g>
                  <path d="M0,31L2,31L4,31L6,31L8,31L10,30.7L12,30.4L14,29.8L16,28.3L18,26.2L20,22.9L22,18.4L24,13.3L26,7.900000000000002L28,3.6999999999999993L30,1L32,1L34,3.400000000000002L36,7.900000000000002L38,13L40,18.4L42,22.6L44,26.2L46,28.3L48,29.5L50,30.4L52,30.7L54,31L56,31L58,31L60,31L62,31"></path>
                </g>
              </g>
            </g>
          </svg> <span class="legend-item-name">[C<sub>8</sub>H<sub>10</sub>S<sub>2</sub> - H]⁻<br> Theoretical</span></div>
        <div class="legend-item"><svg width="64" height="32">
            <g>
              <g class="sample-graph compSample">
                <g>
                  <circle cx="32" cy="4" r="4"></circle>
                </g>
                <g>
                  <line x1="32" x2="32" y1="4" y2="32"></line>
                </g>
                <g>
                  <rect width="48" height="28" x="8" y="4"></rect>
                </g>
              </g>
            </g>
          </svg> <span class="legend-item-name">[C<sub>8</sub>H<sub>10</sub>S<sub>2</sub> - H]⁻<br> Sample</span></div>
      </div>
    </div>
  </div>
</div>
</div>
`;
